Choose lift screen, tickets, vouchers screens work in progress

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -1,5 +1,9 @@
 {
   "@@locale": "en",
-  "helloWorld": "Hello World!",
-  "@helloWorld": {}
+  "appName": "Ski Slope",
+  "@appName": {},
+  "tickets": "Tickets",
+  "@tickets": {},
+  "vouchers": "Vouchers",
+  "@vouchers": {}
 }
