--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -1,4 +1,6 @@
 {
-    "@@locale": "pl",
-    "helloWorld": "Cześć świecie!"
+  "@@locale": "pl",
+  "appName": "Stacja Narciarska",
+  "tickets": "Bilety",
+  "vouchers": "Karnety"
 }
