Pagination of qr codes, changed bottom bar icons

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -5,5 +5,9 @@
   "tickets": "Tickets",
   "@tickets": {},
   "vouchers": "Vouchers",
-  "@vouchers": {}
+  "@vouchers": {},
+  "previous": "Previous",
+  "@previous": {},
+  "next": "Next",
+  "@next": {}
 }
