--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -2,5 +2,7 @@
   "@@locale": "pl",
   "appName": "Stacja Narciarska",
   "tickets": "Bilety",
-  "vouchers": "Karnety"
+  "vouchers": "Karnety",
+  "previous": "Poprzedni",
+  "next": "Następny"
 }
