Welcome screen prepared, it needs small changes, small fixes

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -9,5 +9,11 @@
   "previous": "Previous",
   "@previous": {},
   "next": "Next",
-  "@next": {}
+  "@next": {},
+  "welcomePrevious": "Previous",
+  "@welcomePrevious": {},
+  "welcomeNext": "Next",
+  "@welcomeNext": {},
+  "login": "Login",
+  "@login": {}
 }
