--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -4,5 +4,8 @@
   "tickets": "Bilety",
   "vouchers": "Karnety",
   "previous": "Poprzedni",
-  "next": "Następny"
+  "next": "Następny",
+  "welcomePrevious": "Cofnij",
+  "welcomeNext": "Dalej",
+  "login": "Zaloguj"
 }
