User profile screen, small fixes

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -27,5 +27,15 @@
   "loginUsernameIncorrect": "Username is incorrect",
   "@loginUsernameIncorrect": {},
   "loginPasswordTooShort": "Password too short",
-  "@loginPasswordTooShort": {}
+  "@loginPasswordTooShort": {},
+  "userProfile": "User Profile",
+  "@userProfile": {},
+  "email": "Email",
+  "@email": {},
+  "name": "Name",
+  "@name": {},
+  "surname": "Surname",
+  "@surname": {},
+  "logout": "Logout",
+  "@logout": {}
 }
