User authentication, changes in widgets for working with api and states.

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -32,10 +32,26 @@
   "@userProfile": {},
   "email": "Email",
   "@email": {},
-  "name": "Name",
-  "@name": {},
-  "surname": "Surname",
-  "@surname": {},
+  "firstName": "Name",
+  "@firstName": {},
+  "lastName": "Surname",
+  "@lastName": {},
   "logout": "Logout",
-  "@logout": {}
+  "@logout": {},
+  "welcomeScreenHeadline1": "Ready for fun?",
+  "@welcomeScreenHeadline1": {},
+  "welcomeScreenHeadline2": "Create memories!",
+  "@welcomeScreenHeadline2": {},
+  "welcomeScreenHeadline3": "Enjoy the slope!",
+  "@welcomeScreenHeadline3": {},
+  "welcomeScreenDescription1": "Description1",
+  "@welcomeScreenDescription1": {},
+  "welcomeScreenDescription2": "Description2",
+  "@welcomeScreenDescription2": {},
+  "welcomeScreenDescription3": "Description3",
+  "@welcomeScreenDescription3": {},
+  "incorrectLoginData": "Incorrect login data",
+  "@incorrectLoginData": {},
+  "noInternetConnection": "No internet connection",
+  "@noInternetConnection": {}
 }
