Prepare for google sign in, fix small bug

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -16,6 +16,8 @@
   "@welcomeNext": {},
   "login": "Login",
   "@login": {},
+  "loginWithGoogle": "Login with Google",
+  "@loginWithGoogle": {},
   "register": "Register",
   "@register": {},
   "loginTitle": "Login",
