--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -8,6 +8,7 @@
   "welcomePrevious": "Cofnij",
   "welcomeNext": "Dalej",
   "login": "Zaloguj",
+  "loginWithGoogle": "Użyj konta Google",
   "register": "Zarejestruj się",
   "loginTitle": "Logowanie",
   "username": "Nazwa użytkownika",
