--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -40,17 +40,17 @@
   "@lastName": {},
   "logout": "Logout",
   "@logout": {},
-  "welcomeScreenHeadline1": "Ready for fun?",
+  "welcomeScreenHeadline1": "No limits!",
   "@welcomeScreenHeadline1": {},
-  "welcomeScreenHeadline2": "Create memories!",
+  "welcomeScreenHeadline2": "In harmony with nature",
   "@welcomeScreenHeadline2": {},
-  "welcomeScreenHeadline3": "Enjoy the slope!",
+  "welcomeScreenHeadline3": "Enjoy the slopes!",
   "@welcomeScreenHeadline3": {},
-  "welcomeScreenDescription1": "Description1",
+  "welcomeScreenDescription1": "With us, riding is never monotonous! Especially for you we have prepared several obstacle courses and many other attractions. White madness in the heart of the Sudetes is an unforgettable experience! Don't forget to stop by our mountain inn for a hot meal!",
   "@welcomeScreenDescription1": {},
-  "welcomeScreenDescription2": "Description2",
+  "welcomeScreenDescription2": "Do you care about the environment? So do we, which is why we've decided to do away with traditional lift tickets. To use the ski lift, simply scan the pass purchased online with the QR code that is available in the mobile application. No more searching for crumpled tickets in your pockets!",
   "@welcomeScreenDescription2": {},
-  "welcomeScreenDescription3": "Description3",
+  "welcomeScreenDescription3": "Whether you're already an advanced skier or just starting out, you can have a great time skiing our slopes of varying difficulty. Modern lifts will get you to the top of the slopes efficiently and safely.",
   "@welcomeScreenDescription3": {},
   "incorrectLoginData": "Incorrect login data",
   "@incorrectLoginData": {},
