Fixed bugs with refresh token, added api for list of ski lifts, minor changes, bump version

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -55,5 +55,11 @@
   "incorrectLoginData": "Incorrect login data",
   "@incorrectLoginData": {},
   "noInternetConnection": "No internet connection",
-  "@noInternetConnection": {}
+  "@noInternetConnection": {},
+  "loginServerFail": "Service temporarily unavailable, please try again in a moment",
+  "@loginServerFail": {},
+  "loadingSkiLiftsFail": "Ups! Something went wrong. Try again later!",
+  "@loadingSkiLiftsFail": {},
+  "skiRunLength": "Ski slope length: ",
+  "@skiRunLength": {}
 }
