--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -9,6 +9,7 @@
   "welcomeNext": "Dalej",
   "login": "Zaloguj",
   "loginWithGoogle": "Użyj konta Google",
+  "loginWithGooglePage": "Zaloguj się za pomocą Google",
   "register": "Zarejestruj się",
   "loginTitle": "Logowanie",
   "username": "Nazwa użytkownika",
