Getting ready for tickets api, making some reusable widgets

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -67,5 +67,7 @@
   "startDate": "Start date: ",
   "@startDate": {},
   "expireDate": "Expire date: ",
-  "@expireDate": {}
+  "@expireDate": {},
+  "numberOfEntries": "Number of entries: ",
+  "@numberOfEntries": {}
 }
