--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -33,5 +33,6 @@
   "loadingFail": "Ups! Coś poszło nie tak. Spróbuj ponownie za chwilę!",
   "skiRunLength": "Długość trasy: ",
   "startDate": "Data rozpoczęcia: ",
-  "expireDate": "Data wygaśnięcia: "
+  "expireDate": "Data wygaśnięcia: ",
+  "numberOfEntries": "Ilość wejść: "
 }
