No internet handling

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -60,8 +60,8 @@
   "@noInternetConnection": {},
   "loginServerFail": "Service temporarily unavailable, please try again in a moment",
   "@loginServerFail": {},
-  "loadingFail": "Ups! Something went wrong. Try again later!",
-  "@loadingFail": {},
+  "otherError": "Ups! Something went wrong. Try again later!",
+  "@otherError": {},
   "skiRunLength": "Ski slope length: ",
   "@skiRunLength": {},
   "startDate": "Start date: ",
