--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appName": "Ski Slope",
+  "appName": "Silver Slopes",
   "@appName": {},
   "tickets": "Tickets",
   "@tickets": {},
