--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "appName": "Stacja Narciarska",
+  "appName": "Srebrne Stoki",
   "tickets": "Bilety",
   "vouchers": "Karnety",
   "previous": "Poprzedni",
