User registration in app

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -22,6 +22,8 @@
   "@loginWithGooglePage": {},
   "register": "Register",
   "@register": {},
+  "registerAppBarTitle": "Register",
+  "@registerAppBarTitle": {},
   "loginTitle": "Login",
   "@loginTitle": {},
   "username": "Username",
@@ -30,8 +32,8 @@
   "@password": {},
   "loginUsernameIncorrect": "Username is incorrect",
   "@loginUsernameIncorrect": {},
-  "loginPasswordTooShort": "Password too short",
-  "@loginPasswordTooShort": {},
+  "loginPasswordTooShortTooLong": "Password too short or too long",
+  "@loginPasswordTooShortTooLong": {},
   "userProfile": "User Profile",
   "@userProfile": {},
   "email": "Email",
@@ -60,6 +62,8 @@
   "@noInternetConnection": {},
   "loginServerFail": "Service temporarily unavailable, please try again in a moment",
   "@loginServerFail": {},
+  "registerFail": "Service temporarily unavailable, please try again in a moment",
+  "@registerFail": {},
   "otherError": "Ups! Something went wrong. Try again later!",
   "@otherError": {},
   "skiRunLength": "Ski slope length: ",
@@ -77,5 +81,17 @@
   "emptySkiLiftsSubtitle": "There is no ski lifts available at the moment",
   "@emptySkiLiftsSubtitle": {},
   "emptyTicketsSubtitle": "You don't have any tickets to this ski lift",
-  "@emptyTicketsSubtitle": {}
+  "@emptyTicketsSubtitle": {},
+  "repeatPassword": "Repeat password",
+  "@repeatPassword": {},
+  "registerFistNameNotEmpty": "First name should not be empty",
+  "@registerFirstNameNotEmpty": {},
+  "registerLastNameNotEmpty": "Last name should not be empty",
+  "@registerLastNameNotEmpty": {},
+  "registerInvalidEmail": "Enter correct email",
+  "@registerInvalidEmail": {},
+  "passwordNotIdentical": "Passwords are not the same",
+  "@passwordNotIdentical": {},
+  "userAlreadyExists": "User with this username already exists. Please choose another username.",
+  "@userAlreadyExists": {}
 }
