--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -11,11 +11,12 @@
   "loginWithGoogle": "Użyj konta Google",
   "loginWithGooglePage": "Zaloguj się za pomocą Google",
   "register": "Zarejestruj się",
+  "registerAppBarTitle": "Rejestracja",
   "loginTitle": "Logowanie",
   "username": "Nazwa użytkownika",
   "password": "Hasło",
   "loginUsernameIncorrect": "Nieprawidłowa nazwa użytkownika",
-  "loginPasswordTooShort": "Hasło za krótkie",
+  "loginPasswordTooShortTooLong": "Hasło za krótkie lub za długie",
   "userProfile": "Profil Użytkownika",
   "email": "Email",
   "firstName": "Imię",
@@ -30,6 +31,7 @@
   "incorrectLoginData": "Niepoprawne dane logowania",
   "noInternetConnection": "Brak internetu",
   "loginServerFail": "Usługa chwilowo niedostępna, spróbuj ponownie za chwilę",
+  "registerFail": "Usługa chwilowo niedostępna, spróbuj ponownie za chwilę",
   "otherError": "Ups! Coś poszło nie tak. Spróbuj ponownie za chwilę!",
   "skiRunLength": "Długość trasy: ",
   "startDate": "Data rozpoczęcia: ",
@@ -38,5 +40,11 @@
   "emptyHere": "Trochę tu pusto!",
   "emptyVouchersSubtitle": "Nie masz żadnych karnetów",
   "emptySkiLiftsSubtitle": "Aktualnie nie ma dostępnych żadnych wyciągów",
-  "emptyTicketsSubtitle": "Nie masz żadnych biletów na ten wyciąg"
+  "emptyTicketsSubtitle": "Nie masz żadnych biletów na ten wyciąg",
+  "repeatPassword": "Powtórz hasło",
+  "registerFistNameNotEmpty": "Wprowadź imię",
+  "registerLastNameNotEmpty": "Wprowadź nazwisko",
+  "registerInvalidEmail": "Wprowadź poprawny adres email",
+  "passwordNotIdentical": "Hasła nie są identyczne",
+  "userAlreadyExists": "Użytkownik o tej nazwie już istnieje. Wybierz inną nazwę."
 }
