Small changes in register, bug fix of snackbar_viewer, bump version

--- a/ski_slope/locale/intl_en.arb
+++ b/ski_slope/locale/intl_en.arb
@@ -93,5 +93,7 @@
   "passwordNotIdentical": "Passwords are not the same",
   "@passwordNotIdentical": {},
   "userAlreadyExists": "User with this username already exists. Please choose another username.",
-  "@userAlreadyExists": {}
+  "@userAlreadyExists": {},
+  "registered": "Registered",
+  "@registered": {}
 }
