--- a/ski_slope/locale/intl_pl.arb
+++ b/ski_slope/locale/intl_pl.arb
@@ -46,5 +46,6 @@
   "registerLastNameNotEmpty": "Wprowadź nazwisko",
   "registerInvalidEmail": "Wprowadź poprawny adres email",
   "passwordNotIdentical": "Hasła nie są identyczne",
-  "userAlreadyExists": "Użytkownik o tej nazwie już istnieje. Wybierz inną nazwę."
+  "userAlreadyExists": "Użytkownik o tej nazwie już istnieje. Wybierz inną nazwę.",
+  "registered": "Zarejestrowano"
 }
